--- a/Calculator.Test/Calculator.Test.fsproj
+++ b/Calculator.Test/Calculator.Test.fsproj
@@ -54,7 +54,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Library1.fs" />
+    <Compile Include="Calculator.Test.fs" />
     <None Include="Script.fsx" />
     <Content Include="packages.config" />
   </ItemGroup>
